updated with MCTOpportunity-p1